--- a/app/src/main/res/layout/fragment_spells.xml
+++ b/app/src/main/res/layout/fragment_spells.xml
@@ -4,10 +4,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".presentation.feature.compendium.class.ClassFragment">
+    tools:context=".presentation.feature.compendium.classes.classesList.ClassesFragment">
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rv_caps"
+        android:id="@+id/rv_classes"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
