--- a/app/src/main/res/layout/fragment_equipments.xml
+++ b/app/src/main/res/layout/fragment_equipments.xml
@@ -4,16 +4,16 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".presentation.feature.compendium.spells.spellsList.SpellsFragment">
+    tools:context=".presentation.feature.compendium.equipments.equipmentsList.EquipmentsFragment">
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rv_spells"
+        android:id="@+id/rv_equipments"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:listitem="@layout/item_spell" />
+        tools:listitem="@layout/item_equipment" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
