--- a/app/src/main/res/layout/fragment_spell_detail.xml
+++ b/app/src/main/res/layout/fragment_spell_detail.xml
@@ -25,7 +25,7 @@
             tools:text="Acid Arrow" />
 
         <androidx.appcompat.widget.AppCompatTextView
-            android:id="@+id/tv_level"
+            android:id="@+id/tv_category"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
@@ -43,8 +43,8 @@
             android:layout_marginStart="5dp"
             android:textColor="@color/black"
             android:textSize="18sp"
-            app:layout_constraintStart_toEndOf="@+id/tv_level"
-            app:layout_constraintTop_toTopOf="@+id/tv_level"
+            app:layout_constraintStart_toEndOf="@+id/tv_category"
+            app:layout_constraintTop_toTopOf="@+id/tv_category"
             tools:text="0" />
 
         <androidx.appcompat.widget.AppCompatTextView
@@ -57,7 +57,7 @@
             android:textSize="18sp"
             android:textStyle="bold"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tv_level" />
+            app:layout_constraintTop_toBottomOf="@+id/tv_category" />
 
         <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/tv_school_content"
@@ -65,7 +65,6 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="5dp"
             android:textColor="@color/black"
-
             android:textSize="18sp"
             app:layout_constraintStart_toEndOf="@+id/tv_school"
             app:layout_constraintTop_toTopOf="@+id/tv_school"
@@ -89,7 +88,6 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="5dp"
             android:textColor="@color/black"
-
             android:textSize="18sp"
             app:layout_constraintStart_toEndOf="@+id/tv_casting_time"
             app:layout_constraintTop_toTopOf="@+id/tv_casting_time"
@@ -114,7 +112,6 @@
             android:layout_marginStart="5dp"
             android:textColor="@color/black"
             android:textSize="18sp"
-
             app:layout_constraintStart_toEndOf="@+id/tv_range"
             app:layout_constraintTop_toTopOf="@+id/tv_range"
             tools:text="15ft" />
@@ -140,7 +137,6 @@
             android:textSize="18sp"
             app:layout_constraintStart_toEndOf="@+id/tv_components"
             app:layout_constraintTop_toTopOf="@+id/tv_components"
-
             tools:text="V, S" />
 
         <androidx.appcompat.widget.AppCompatTextView
@@ -159,6 +155,7 @@
             android:id="@+id/tv_duration_content"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginStart="5dp"
             android:textColor="@color/black"
             android:textSize="18sp"
             app:layout_constraintStart_toEndOf="@+id/tv_duration"
@@ -214,10 +211,9 @@
             tools:visibility="visible" />
 
         <androidx.appcompat.widget.AppCompatTextView
-            android:id="@+id/higher_level_cotent"
+            android:id="@+id/higher_level_content"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
             android:textColor="@color/black"
             android:textSize="18sp"
             android:visibility="gone"
