--- a/app/src/main/res/layout/item_equipment.xml
+++ b/app/src/main/res/layout/item_equipment.xml
@@ -10,27 +10,16 @@
         android:id="@+id/tv_name"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="6sp"
         android:textColor="@color/base_red"
-        android:textSize="20sp"
+        android:textSize="18sp"
         android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:text="Acid Arrow" />
+        tools:text="Heavy Plates" />
 
     <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/tv_school"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:textSize="14sp"
-        android:textStyle="bold"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tv_name"
-        tools:text="Conjuration" />
-
-    <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/tv_level"
+        android:id="@+id/tv_category"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textColor="@color/secondary_red"
@@ -39,7 +28,6 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:text="Cantrip" />
-
+        tools:text="Armor" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
