detalhes de equipamentos feitos

--- a/app/src/main/res/layout/activity_compendium.xml
+++ b/app/src/main/res/layout/activity_compendium.xml
@@ -22,6 +22,7 @@
             android:backgroundTint="@color/base_red"
             android:text="@string/txt_spells"
             android:textColor="@color/white"
+            android:textSize="26sp"
             app:layout_constraintBottom_toTopOf="@+id/bt_equipments"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -34,6 +35,7 @@
             android:backgroundTint="@color/base_red"
             android:text="@string/txt_equipments"
             android:textColor="@color/white"
+            android:textSize="26sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
