--- a/app/src/main/res/layout/fragment_spell_detail.xml
+++ b/app/src/main/res/layout/fragment_spell_detail.xml
@@ -25,7 +25,7 @@
             tools:text="Acid Arrow" />
 
         <androidx.appcompat.widget.AppCompatTextView
-            android:id="@+id/tv_category"
+            android:id="@+id/tv_level"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
@@ -43,8 +43,8 @@
             android:layout_marginStart="5dp"
             android:textColor="@color/black"
             android:textSize="18sp"
-            app:layout_constraintStart_toEndOf="@+id/tv_category"
-            app:layout_constraintTop_toTopOf="@+id/tv_category"
+            app:layout_constraintStart_toEndOf="@+id/tv_level"
+            app:layout_constraintTop_toTopOf="@+id/tv_level"
             tools:text="0" />
 
         <androidx.appcompat.widget.AppCompatTextView
@@ -57,7 +57,7 @@
             android:textSize="18sp"
             android:textStyle="bold"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tv_category" />
+            app:layout_constraintTop_toBottomOf="@+id/tv_level" />
 
         <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/tv_school_content"
