--- a/app/src/main/res/layout/item_detail_basic.xml
+++ b/app/src/main/res/layout/item_detail_basic.xml
@@ -5,6 +5,6 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginEnd="6sp"
-    android:textSize="14sp"
-    android:textStyle="bold"
+    android:textSize="18sp"
+    android:textColor="@color/black"
     tools:text="Animal cuddle" />
