--- a/app/src/main/res/layout/item_spell.xml
+++ b/app/src/main/res/layout/item_spell.xml
@@ -6,15 +6,25 @@
     android:layout_height="wrap_content"
     android:padding="18dp">
 
+    <androidx.constraintlayout.utils.widget.ImageFilterView
+        android:id="@+id/iv_favorite"
+        android:layout_width="35dp"
+        android:layout_height="35dp"
+        android:src="@drawable/ic_favorite"
+        android:tint="@color/secondary_red"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/tv_name"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="6sp"
+        android:layout_marginStart="20dp"
         android:textColor="@color/base_red"
         android:textSize="20sp"
         android:textStyle="bold"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/iv_favorite"
         app:layout_constraintTop_toTopOf="parent"
         tools:text="Acid Arrow" />
 
@@ -25,7 +35,8 @@
         android:layout_marginTop="10dp"
         android:textSize="14sp"
         android:textStyle="bold"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/tv_name"
         app:layout_constraintTop_toBottomOf="@+id/tv_name"
         tools:text="Conjuration" />
 
