--- a/app/src/main/res/layout/view_error.xml
+++ b/app/src/main/res/layout/view_error.xml
@@ -1,33 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:layout_height="match_parent">
 
     <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/iv_error"
         android:layout_width="wrap_content"
         android:layout_height="165dp"
-        app:srcCompat="@drawable/ic_error"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintVertical_chainStyle="packed"
-        app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginBottom="30dp"
         app:layout_constraintBottom_toTopOf="@id/tv_error_title"
-        app:layout_constraintTop_toTopOf="parent"/>
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_chainStyle="packed"
+        app:srcCompat="@drawable/ic_error" />
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/tv_error_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/txt_error_title"
-        app:layout_constraintStart_toStartOf="parent"
         android:layout_marginBottom="16dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/tv_error_subtitle"
-        app:layout_constraintTop_toBottomOf="@+id/iv_error"
+        android:text="@string/txt_error_title"
+        android:textColor="@color/gray_dark"
         android:textSize="18sp"
-        android:textColor="@color/gray_dark"/>
+        app:layout_constraintBottom_toTopOf="@id/tv_error_subtitle"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/iv_error" />
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/tv_error_subtitle"
