--- a/app/src/main/res/menu/menu_favorite.xml
+++ b/app/src/main/res/menu/menu_favorite.xml
@@ -4,9 +4,8 @@
     tools:context=".ui.activities.UserListActivity">
 
     <item
-        android:id="@+id/menu_search"
-        android:icon="@android:drawable/ic_search_category_default"
+        android:id="@+id/menu_favorite_icon"
+        android:icon="@drawable/ic_favorite"
         android:title="@string/txt_menu_search"
-        app:actionViewClass="androidx.appcompat.widget.SearchView"
         app:showAsAction="always" />
 </menu>
